# evolution-clamav

./: .travis.yml  AUTHORS  CHANGELOG  ChangeLog  Makefile.am  NEWS  README  clamav_evolution.sh  configure.ac
.github/workflows/: build-test.yml
misc/: TODO.txt
src/man/1/: Makefile.am  clamscan-notify.sh.1.man.in  evolution-clamav-scripts-location.1.man.in  evolution-clamav-scripts-location.sh.1.man.in  evolution-clamav.sh.1.man.in  evolution-clamavd.sh.1.man.in
src/prg/bash/: Makefile.am  clamscan-notify.sh.in  evolution-clamav-scripts-location.sh.in  evolution-clamav.sh.in  evolution-clamavd.sh.in
src/prg/bash/pkglibexec/: Makefile.am  clamscan-notify.sh.in  evolution-clamav.sh.in  evolution-clamavd.sh.in
